# certserver

./: CMakeLists.txt  README.md
camkes/: CertServer.camkes  if_CertServer.camkes
client/include/: CertServer.h  if_CertServer.h
client/src/: CertServer.c
server/src/: certServer_rpc.c
